--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,6 @@
 name: E2E Tests
 
 on:
-  push:
-    branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
 
@@ -15,23 +13,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v6
-    
-    - uses: actions/setup-node@v6
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v6
       with:
         node-version-file: '.node-version'
-    
+
     - name: Install dependencies
       run: npm ci
-    
+
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    
+
     - name: Run Playwright tests
       run: npm test
-    
-    - uses: actions/upload-artifact@v6
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
