--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "author": "GitHub Copilot",
   "license": "MIT",
   "dependencies": {
-    "chart.js": "^4.4.1",
-    "lucide": "^0.563.0"
+    "chart.js": "^4.4.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
