STEP 10: 低優先度改善 - clearOldCacheスロットル追加、dependabot設定、テスト追加(escapeHtml数値、createRatioHtml境界値、buildSearchUrl完全性、スロットル)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,38 +3,29 @@
 
 version: 2
 updates:
-  # npm dependencies
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     open-pull-requests-limit: 10
+    labels:
+      - "dependencies"
     groups:
-      # Group all npm dependencies together
-      npm-dependencies:
-        patterns:
-          - "*"
-
-  # GitHub Actions
+      dev-dependencies:
+        dependency-type: "development"
+        update-types:
+          - "minor"
+          - "patch"
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+          - "minor"
+          - "patch"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     open-pull-requests-limit: 5
-    groups:
-      # Group all GitHub Actions updates together
-      github-actions:
-        patterns:
-          - "*"
-
-  # Dev Containers
-  - package-ecosystem: "devcontainers"
-    directory: "/"
-    schedule:
-      interval: "daily"
-    open-pull-requests-limit: 5
-    groups:
-      # Group all devcontainer feature updates together
-      devcontainers:
-        patterns:
-          - "*"
+    labels:
+      - "dependencies"
+      - "github-actions"
